fix overlapping thumbnail issue

--- a/client/homebrew/pages/vaultPage/vaultPage.less
+++ b/client/homebrew/pages/vaultPage/vaultPage.less
@@ -272,6 +272,9 @@ body {
 								line-height  : 1.5em;
 							}
 						}
+						.links {
+							z-index:2;
+						}
 
 						hr {
 							margin: 0px;
